--- a/Kadali.html
+++ b/Kadali.html
@@ -9,6 +9,7 @@
 <dev style="text-align: center;">
     <h1>KADALI</h1></dev>
     <ol>
+    <video src="./kadali mp4.mp4" height="500" width="500" controls muted autoplay loop></video>
     <h2>Song Glimpse</h2>
     <li><audio src="./[iSongs.info] 02 - Yaadike.mp3" controls muted autoplay></audio></li>
     <h3>Yaadike ♪</h3>
